[package]
name = "acs-rs"
version = "0.1.0"
authors = ["Boden Garman <boden.garman@spintel.net.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
env_logger = "0.7.1"
log = "0.4.0"

strum = "0.18.0"
strum_macros = "0.18.0"

yaserde = "0.4.1"
yaserde_derive = "0.4.1"
xml-rs = "0.8.3"